--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Asset Management Club — Home</title>
-  <link rel="icon" href="assets/img/logo-placeholder.svg">
-
+  <link rel="icon" href="logo.png">
   <style>
     :root{
       --navy:#0b2545;
@@ -22,34 +21,34 @@
     .header-inner{display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;}
     .brand img{height:40px;}
     .main-nav a{color:var(--white); text-decoration:none; margin:0 12px; font-weight:600;}
+    .page-content{padding:36px 0;}
     .hero{padding:48px 0; display:flex; align-items:center; flex-wrap:wrap;}
-    .hero-card{flex:1; min-width:280px;}
+    .hero-card{flex:1;}
     .hero-card h1{font-size:36px; margin:0 0 8px; color:var(--navy);}
     .hero-card .lead{color:var(--muted); margin-bottom:16px;}
-    .btn{display:inline-block; padding:10px 18px; border-radius:8px; text-decoration:none; margin-right:8px;}
+    .btn{display:inline-block; padding:10px 18px; border-radius:8px; text-decoration:none;}
     .btn-primary{background:var(--navy); color:var(--white);}
     .btn-outline{border:2px solid var(--navy); color:var(--navy); background:transparent;}
     .badge{background:var(--blue); color:var(--white); padding:18px; border-radius:12px; margin-left:24px;}
-    .features{display:grid; grid-template-columns:repeat(auto-fit,minmax(240px,1fr)); gap:18px; margin-top:28px;}
+    .features{display:grid; grid-template-columns:repeat(3,1fr); gap:18px; margin-top:28px;}
     .feature{background:#f8fafc; padding:18px; border-radius:12px;}
     .latest{margin-top:36px;}
     .card-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(240px,1fr)); gap:16px;}
     .card{background:#fff; border:1px solid #e6eef6; padding:18px; border-radius:12px;}
     .site-footer{background:#f7fafc; padding:20px 0; margin-top:40px;}
     .footer-inner{display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap;}
-    .page-content{padding:36px 0;}
     @media (max-width:900px){
       .features{grid-template-columns:1fr;}
-      .hero{flex-direction:column;}
+      .header-inner{flex-direction:column;}
+      .main-nav{margin-top:12px;}
     }
-    .more-link{margin-top:12px;}
   </style>
 </head>
 <body>
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="40"></a>
+      <a class="brand" href="index.html"><img src="logo.png" alt="AMC logo"></a>
       <nav class="main-nav">
         <a href="index.html">Home / Нүүр</a>
         <a href="about.html">About / Тухай</a>
@@ -60,78 +59,70 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero container">
-    <div class="hero-card">
-      <h1>Asset Management Club (AMC)</h1>
-      <p class="lead">
-        The student-run club for finance enthusiasts — workshops, research, and practical investing skills.<br>
-        Оюутан залуусын клуб — семинар, судалгаа, хөрөнгө оруулалтын практик чадварууд.
-      </p>
-      <a class="btn btn-primary" href="about.html">Learn more / Дэлгэрэнгүй</a>
-      <a class="btn btn-outline" href="news.html">News & Events / Мэдээ ба арга хэмжээ</a>
-    </div>
-    <aside class="badge">
-      <p>
+  <main class="container page-content">
+    <section class="hero">
+      <div class="hero-card">
+        <h1>Asset Management Club (AMC)</h1>
+        <p class="lead">The student-run club for finance enthusiasts — workshops, research, and practical investing skills.</p>
+        <a class="btn btn-primary" href="about.html">Learn more / Дэлгэрэнгүй</a>
+        <a class="btn btn-outline" href="news.html">News & Events / Мэдээ ба арга хэмжээ</a>
+      </div>
+      <aside class="badge">
         University of Finance and Economics<br>
         National University of Mongolia
-      </p>
-    </aside>
-  </section>
+      </aside>
+    </section>
 
-  <!-- Features -->
-  <section class="features container">
-    <article class="feature">
-      <h3>Education & Workshops / Боловсрол ба семинар</h3>
-      <p>Practical workshops on investing, financial modelling and asset allocation.<br>Хөрөнгө оруулалт, санхүүгийн загварчлал, хөрөнгө хуваарилалтын практик семинар.</p>
-    </article>
-    <article class="feature">
-      <h3>Research Projects / Судалгааны төслүүд</h3>
-      <p>Student-led research and portfolio challenges.<br>Оюутны удирдсан судалгаа, портфолио сорилтууд.</p>
-    </article>
-    <article class="feature">
-      <h3>Networking / Сүлжээ</h3>
-      <p>Connect with alumni, industry speakers and like-minded peers.<br>Салбарын мэргэжилтнүүд болон тэтгэлэгт хүмүүстэй холбогдоно.</p>
-    </article>
-  </section>
+    <section class="features">
+      <div class="feature">
+        <h3>Education & Workshops</h3>
+        <p>Practical workshops on investing, financial modelling and asset allocation.</p>
+      </div>
+      <div class="feature">
+        <h3>Research Projects</h3>
+        <p>Student-led research and portfolio challenges to build professional skills.</p>
+      </div>
+      <div class="feature">
+        <h3>Networking</h3>
+        <p>Connect with alumni, industry speakers and like-minded peers.</p>
+      </div>
+    </section>
 
-  <!-- Latest News -->
-  <section class="latest container">
-    <h2>Latest News / Сүүлийн мэдээ</h2>
-    <div class="card-grid">
-      <article class="card">
-        <h4>AMC welcomed guest speaker from ABC Capital / AMC нь ABC Capital-ы зочин илтгэгчийг хүлээн авлаа</h4>
-        <small>2025-09-12</small>
-        <p>A talk on real-world asset allocation by an industry practitioner.<br>Салбарын мэргэжилтний хөрөнгө хуваарилалтын практик илтгэл.</p>
-        <a class="btn btn-outline" href="#">Read / Дэлгэрэнгүй</a>
-      </article>
-      <article class="card">
-        <h4>Intro to Asset Management Workshop / Хөрөнгө Удирдлагын Танилцууламж Үйл Ажиллагаа</h4>
-        <small>2025-10-20</small>
-        <p>Hands-on workshop: portfolio basics and valuation methods.<br>Портфолийн үндэс, үнэлгээний аргуудын практик семинар.</p>
-        <a class="btn btn-outline" href="#">Read / Дэлгэрэнгүй</a>
-      </article>
-      <article class="card">
-        <h4>Student Investment Challenge / Оюутны Хөрөнгө Оруулалтын Уралдаан</h4>
-        <small>2025-11-05</small>
-        <p>Compete in teams to build the best simulated portfolio.<br>Багийн мөргөлдөөн: хамгийн сайн симуляцийн портфолио бүтээх.</p>
-        <a class="btn btn-outline" href="#">Read / Дэлгэрэнгүй</a>
-      </article>
-    </div>
-    <div class="more-link">
-      <a class="btn btn-outline" href="news.html">View all news / Бүх мэдээ</a>
-    </div>
-  </section>
+    <section class="latest">
+      <h2>Latest News</h2>
+      <div class="card-grid">
+        <div class="card">
+          <h4>AMC welcomed guest speaker from ABC Capital</h4>
+          <small>2025-09-12</small>
+          <p>A talk on real-world asset allocation by an industry practitioner.</p>
+          <a class="btn btn-outline" href="#">Read</a>
+        </div>
+        <div class="card">
+          <h4>Intro to Asset Management Workshop</h4>
+          <small>2025-10-20</small>
+          <p>Hands-on workshop: portfolio basics and valuation methods.</p>
+          <a class="btn btn-outline" href="#">Read</a>
+        </div>
+        <div class="card">
+          <h4>Student Investment Challenge</h4>
+          <small>2025-11-05</small>
+          <p>Compete in teams to build the best simulated portfolio.</p>
+          <a class="btn btn-outline" href="#">Read</a>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="36">
+      <div>
+        <img src="logo.png" alt="AMC logo" height="36">
         <p>&copy; 2025 Asset Management Club — AMC</p>
       </div>
-      <div class="footer-right">
-        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a>
+      <div>
+        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a> |
+        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a> |
         <a href="mailto:assetmanagementclubmn@gmail.com">Email</a>
       </div>
     </div>
