--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About — Asset Management Club</title>
-  <link rel="icon" href="assets/img/logo-placeholder.svg">
-
+  <link rel="icon" href="logo.png">
   <style>
     :root{
       --navy:#0b2545;
@@ -23,7 +22,7 @@
     .brand img{height:40px;}
     .main-nav a{color:var(--white); text-decoration:none; margin:0 12px; font-weight:600;}
     .page-content{padding:36px 0;}
-    .card{background:#f8fafc; border-radius:12px; padding:18px; margin-bottom:20px;}
+    .card{background:#fff; border:1px solid #e6eef6; padding:18px; border-radius:12px; margin-bottom:16px;}
     .site-footer{background:#f7fafc; padding:20px 0; margin-top:40px;}
     .footer-inner{display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap;}
     @media (max-width:900px){
@@ -36,7 +35,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="40"></a>
+      <a class="brand" href="index.html"><img src="logo.png" alt="AMC logo"></a>
       <nav class="main-nav">
         <a href="index.html">Home / Нүүр</a>
         <a href="about.html">About / Тухай</a>
@@ -46,15 +45,14 @@
     </div>
   </header>
 
-  <!-- Page Content -->
+  <!-- Main Content -->
   <main class="container page-content">
-    <h1>About Asset Management Club / AMC-ийн тухай</h1>
+    <h1>About Asset Management Club</h1>
 
     <section class="card">
       <h2>Our Mission / Манай эрхэм зорилго</h2>
       <p>
-        The Asset Management Club (AMC) supports student development by providing educational events, research opportunities, and practical training to build investor-minded graduates with professional finance skills.<br>
-        Клубийн эрхэм зорилго нь оюутан залуусыг бүх талаар дэмжин хөгжүүлж, чөлөөт цагийг зөв боловсон өнгөрөөх, судалгаа шинжилгээ хийх, мэргэжлийн хөрөнгө оруулагчийн чадваруудыг эзэмшүүлэхэд оршино.
+        The Asset Management Club (AMC) supports student development by providing educational events, research opportunities, and practical training to build investor-minded graduates with professional finance skills.
       </p>
     </section>
 
@@ -71,13 +69,13 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="36">
+      <div>
+        <img src="logo.png" alt="AMC logo" height="36">
         <p>&copy; 2025 Asset Management Club — AMC</p>
       </div>
-      <div class="footer-right">
-        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a>
+      <div>
+        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a> |
+        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a> |
         <a href="mailto:assetmanagementclubmn@gmail.com">Email</a>
       </div>
     </div>
