--- a/news.html
+++ b/news.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>News & Events — AMC</title>
-  <link rel="icon" href="assets/img/logo-placeholder.svg">
-
+  <link rel="icon" href="logo.png">
   <style>
     :root{
       --navy:#0b2545;
@@ -24,8 +23,7 @@
     .main-nav a{color:var(--white); text-decoration:none; margin:0 12px; font-weight:600;}
     .page-content{padding:36px 0;}
     .card-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(240px,1fr)); gap:16px;}
-    .card{background:#f8fafc; border-radius:12px; padding:18px;}
-    .btn-outline{border:2px solid var(--navy); color:var(--navy); background:transparent; text-decoration:none; padding:8px 14px; border-radius:8px; display:inline-block; margin-top:8px;}
+    .card{background:#fff; border:1px solid #e6eef6; padding:18px; border-radius:12px;}
     .site-footer{background:#f7fafc; padding:20px 0; margin-top:40px;}
     .footer-inner{display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap;}
     @media (max-width:900px){
@@ -38,7 +36,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="40"></a>
+      <a class="brand" href="index.html"><img src="logo.png" alt="AMC logo"></a>
       <nav class="main-nav">
         <a href="index.html">Home / Нүүр</a>
         <a href="about.html">About / Тухай</a>
@@ -48,42 +46,42 @@
     </div>
   </header>
 
-  <!-- Page Content -->
+  <!-- Main Content -->
   <main class="container page-content">
     <h1>News & Events / Мэдээ ба Арга хэмжээ</h1>
 
     <section class="card-grid">
-      <article class="card">
-        <h3>AMC welcomed guest speaker from ABC Capital / AMC нь ABC Capital-ы зочин илтгэгчийг хүлээн авлаа</h3>
+      <div class="card">
+        <h3>AMC welcomed guest speaker from ABC Capital</h3>
         <small>2025-09-12</small>
-        <p>A talk on real-world asset allocation by an industry practitioner.<br>Салбарын мэргэжилтний хөрөнгө хуваарилалтын практик илтгэл.</p>
-        <a class="btn-outline" href="#">Read / Дэлгэрэнгүй</a>
-      </article>
-      <article class="card">
-        <h3>Intro to Asset Management Workshop / Хөрөнгө Удирдлагын Танилцууламж Үйл Ажиллагаа</h3>
+        <p>A talk on real-world asset allocation by an industry practitioner.</p>
+        <a class="btn btn-primary" href="#">Details</a>
+      </div>
+      <div class="card">
+        <h3>Intro to Asset Management Workshop</h3>
         <small>2025-10-20</small>
-        <p>Hands-on workshop: portfolio basics and valuation methods.<br>Портфолийн үндэс, үнэлгээний аргуудын практик семинар.</p>
-        <a class="btn-outline" href="#">Read / Дэлгэрэнгүй</a>
-      </article>
-      <article class="card">
-        <h3>Student Investment Challenge / Оюутны Хөрөнгө Оруулалтын Уралдаан</h3>
+        <p>Hands-on workshop: portfolio basics and valuation methods.</p>
+        <a class="btn btn-primary" href="#">Details</a>
+      </div>
+      <div class="card">
+        <h3>Student Investment Challenge</h3>
         <small>2025-11-05</small>
-        <p>Compete in teams to build the best simulated portfolio.<br>Багийн мөргөлдөөн: хамгийн сайн симуляцийн портфолио бүтээх.</p>
-        <a class="btn-outline" href="#">Read / Дэлгэрэнгүй</a>
-      </article>
+        <p>Compete in teams to build the best simulated portfolio.</p>
+        <a class="btn btn-primary" href="#">Details</a>
+      </div>
     </section>
   </main>
 
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="36">
+      <div>
+        <img src="logo.png" alt="AMC logo" height="36">
         <p>&copy; 2025 Asset Management Club — AMC</p>
       </div>
-      <div class="footer-right">
-        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a>
+      <div>
+        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a> |
+        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a> |
         <a href="mailto:assetmanagementclubmn@gmail.com">Email</a>
       </div>
     </div>
