--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact — AMC</title>
-  <link rel="icon" href="assets/img/logo-placeholder.svg">
-
+  <link rel="icon" href="logo.png">
   <style>
     :root{
       --navy:#0b2545;
@@ -24,14 +23,13 @@
     .main-nav a{color:var(--white); text-decoration:none; margin:0 12px; font-weight:600;}
     .page-content{padding:36px 0;}
     .contact-cards{display:flex; gap:20px; flex-wrap:wrap;}
-    .card{background:#f8fafc; border-radius:12px; padding:18px; flex:1; min-width:280px;}
-    iframe{width:100%; border:none; border-radius:10px;}
+    .card{background:#fff; border:1px solid #e6eef6; padding:18px; border-radius:12px; flex:1 1 300px;}
+    iframe{width:100%; border:none; border-radius:12px;}
     .site-footer{background:#f7fafc; padding:20px 0; margin-top:40px;}
     .footer-inner{display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap;}
     @media (max-width:900px){
       .header-inner{flex-direction:column;}
       .main-nav{margin-top:12px;}
-      .contact-cards{flex-direction:column;}
     }
   </style>
 </head>
@@ -39,7 +37,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="40"></a>
+      <a class="brand" href="index.html"><img src="logo.png" alt="AMC logo"></a>
       <nav class="main-nav">
         <a href="index.html">Home / Нүүр</a>
         <a href="about.html">About / Тухай</a>
@@ -49,21 +47,21 @@
     </div>
   </header>
 
-  <!-- Page Content -->
+  <!-- Main Content -->
   <main class="container page-content">
     <h1>Contact Us / Холбоо барих</h1>
 
     <section class="contact-cards">
       <div class="card">
         <h3>Follow Us / Биднийг дага</h3>
-        <p><a href="https://www.instagram.com/amc_mn" target="_blank">@amc_mn</a> — Instagram</p>
-        <p><a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Asset Management Student Club</a> — Facebook</p>
-        <p>Email / Имэйл: <a href="mailto:assetmanagementclubmn@gmail.com">assetmanagementclubmn@gmail.com</a></p>
+        <p><a href="https://www.instagram.com/amc_mn" target="_blank">@amc_mn — Instagram</a></p>
+        <p><a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Asset Management Student Club — Facebook</a></p>
+        <p>Email: <a href="mailto:assetmanagementclubmn@gmail.com">assetmanagementclubmn@gmail.com</a></p>
       </div>
 
       <div class="card">
         <h3>Join the Club / Клубт нэгдэх</h3>
-        <!-- Replace the src below with your Google Form embed link -->
+        <!-- Replace below URL with your Google Form embed link -->
         <iframe src="https://docs.google.com/forms/d/e/REPLACE_WITH_YOUR_FORM/viewform?embedded=true" height="480">Loading…</iframe>
       </div>
     </section>
@@ -72,13 +70,13 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <img src="assets/img/logo-placeholder.svg" alt="AMC logo" height="36">
+      <div>
+        <img src="logo.png" alt="AMC logo" height="36">
         <p>&copy; 2025 Asset Management Club — AMC</p>
       </div>
-      <div class="footer-right">
-        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a>
+      <div>
+        <a href="https://www.instagram.com/amc_mn" target="_blank">Instagram</a> |
+        <a href="https://www.facebook.com/assetmanagementstudentclub" target="_blank">Facebook</a> |
         <a href="mailto:assetmanagementclubmn@gmail.com">Email</a>
       </div>
     </div>
