--- a/about.html
+++ b/about.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>About — AMC</title>
-<link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About — Asset Management Club</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="index.html"><img src="assets/img/AMC-No-background.png" alt="AMC logo" height="40"></a>
+    <a class="brand" href="index.html"><img src="assets/img/AMC-No-background.png" alt="AMC logo"></a>
     <nav class="main-nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -19,29 +19,27 @@
   </div>
 </header>
 
-<main class="container page-content">
-<h1>About Asset Management Club</h1>
+<main class="container">
+  <h1>About Asset Management Club</h1>
+  <section class="card">
+    <h2>Our Mission</h2>
+    <p>The Asset Management Club (AMC) supports student development by providing educational events, research opportunities, and practical training to build investor-minded graduates with professional finance skills.</p>
+  </section>
 
-<section class="card">
-  <h2>Our Mission</h2>
-  <p>The Asset Management Club (AMC) supports student development by providing educational events, research opportunities, and practical training to build investor-minded graduates with professional finance skills.</p>
-</section>
-
-<section class="card">
-  <h2>Activities</h2>
-  <ul>
-    <li>Workshops & Training</li>
-    <li>Research & Case Studies</li>
-    <li>Competitions & Portfolio Projects</li>
-  </ul>
-</section>
+  <section class="card">
+    <h2>Activities</h2>
+    <ul>
+      <li>Workshops & training</li>
+      <li>Research & case studies</li>
+      <li>Competitions & portfolio projects</li>
+    </ul>
+  </section>
 </main>
 
 <footer class="site-footer">
-  <div class="container footer-inner">
-    <p>&copy; <span id="year"></span> Asset Management Club — AMC</p>
-  </div>
+  <p>&copy; <span id="year"></span> Asset Management Club — AMC</p>
 </footer>
+
 <script src="assets/js/main.js"></script>
 </body>
 </html>
