--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
 <body>
 <header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="index.html"><img src="assets/img/AMC-No-background.png" alt="AMC logo"></a>
+    <a class="brand" href="index.html"><img src="assets/img/logo.png" alt="AMC logo"></a>
     <nav class="main-nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
