--- a/index.html
+++ b/index.html
@@ -1,58 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Asset Management Club — Home</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="icon" href="assets/img/logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AMC - Asset Management Club</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<header class="site-header">
-  <div class="container header-inner">
-    <a class="brand" href="index.html"><img src="assets/img/logo.png" alt="AMC logo"></a>
-    <nav class="main-nav">
+
+  <!-- Header -->
+  <header class="site-header">
+    <div class="logo">
+      <img src="assets/img/logo.png" alt="AMC Logo">
+      <h1>Asset Management Club</h1>
+    </div>
+    <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="news.html">News & Events</a>
+      <a href="news.html">News</a>
       <a href="contact.html">Contact</a>
     </nav>
-  </div>
-</header>
+  </header>
 
-<main class="container">
+  <!-- Hero Section -->
   <section class="hero">
-    <h1>Asset Management Club (AMC)</h1>
-    <p>The student-run club for finance enthusiasts — workshops, research, and practical investing skills.</p>
-    <a class="btn btn-primary" href="about.html">Learn more</a>
-    <a class="btn btn-outline" href="news.html">News & Events</a>
-  </section>
-
-  <section class="features">
-    <div class="feature">
-      <h3>Education & Workshops</h3>
-      <p>Practical workshops on investing, financial modelling and asset allocation.</p>
-    </div>
-    <div class="feature">
-      <h3>Research Projects</h3>
-      <p>Student-led research and portfolio challenges to build professional skills.</p>
-    </div>
-    <div class="feature">
-      <h3>Networking</h3>
-      <p>Connect with alumni, industry speakers and like-minded peers.</p>
+    <div class="hero-content">
+      <h2>Welcome to the Asset Management Club</h2>
+      <p>Empowering future finance leaders through collaboration, learning, and growth.</p>
+      <a href="about.html" class="btn">Learn More</a>
     </div>
   </section>
 
-  <section class="latest">
+  <!-- News Preview -->
+  <section class="news-preview">
     <h2>Latest News</h2>
-    <div id="latestList" class="card-grid"></div>
+    <div class="card-container">
+      <div class="card">
+        <h3>Fall Membership Now Open</h3>
+        <p>We are now accepting new members for the Fall semester! Join AMC and take your finance skills to the next level.</p>
+      </div>
+      <div class="card">
+        <h3>Investment Simulation 2025</h3>
+        <p>Participate in our upcoming investment competition and test your analytical abilities.</p>
+      </div>
+      <div class="card">
+        <h3>Guest Speaker: CFA Charterholder</h3>
+        <p>Hear from a CFA professional about career paths in asset management and finance.</p>
+      </div>
+    </div>
   </section>
-</main>
 
-<footer class="site-footer">
-  <p>&copy; <span id="year"></span> Asset Management Club — AMC</p>
-</footer>
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <p>© 2025 Asset Management Club | amc.mn</p>
+      <div class="social-icons">
+        <a href="#"><img src="assets/img/facebook.svg" alt="Facebook"></a>
+        <a href="#"><img src="assets/img/instagram.svg" alt="Instagram"></a>
+        <a href="#"><img src="assets/img/linkedin.svg" alt="LinkedIn"></a>
+      </div>
+    </div>
+  </footer>
 
-<script src="assets/js/main.js"></script>
 </body>
 </html>
